// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440004"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base hasIconAndLabel work secondary fullWidth"
      id="123e4567-e89b-12d3-a456-426655440003"
      type="button"
    >
      <svg
        class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
        data-testid="more"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M170.667 512c0-47.13 38.205-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.205 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM426.667 512c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM768 426.667c-47.13 0-85.333 38.204-85.333 85.333s38.204 85.333 85.333 85.333c47.13 0 85.333-38.204 85.333-85.333s-38.204-85.333-85.333-85.333z"
        />
      </svg>
      <span
        class="base extraBold small uppercase"
      >
        More Actions
      </span>
    </button>
  </div>
</div>
`;

exports[`Menu with custom activator renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440040"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base work primary"
      id="123e4567-e89b-12d3-a456-426655440039"
      type="button"
    >
      <span
        class="base extraBold small uppercase"
      >
        Menu
      </span>
    </button>
  </div>
</div>
`;
